src/test/deca/context/invalid/provided/instanceof1.deca
class A{
    int x;
    float t;
}

class B {
    int r;
}
{
    int n;
    boolean b = n instanceof A;
}